<resources>
    <string name="app_name" translatable="false">EDT UT3</string>
    <string name="title_calendar">Calendrier</string>
    <string name="title_notes">Notes</string>
    <string name="title_map">Carte</string>
    <string name="addr_celcat" translatable="false">https://edt.univ-tlse3.fr</string>
    <string name="add_note">Ajouter une note</string>
    <string name="enable_update_notifications">Activer les notifications</string>
    <string name="light">Clair</string>
    <string name="dark">Sombre</string>
    <string name="theme">Thème</string>
    <string name="application">Application</string>
    <string name="calendar_link">Lien vers votre calendrier Celcat</string>
    <string name="not_valid_link">Lien non valide</string>
    <string name="summary_notifications">Cette option permet d\'activer ou non les notifications à chaque mise à jour de l\'emploi du temps. Elles indiqueront combien de cours on été ajoutés, supprimés, modifiés.</string>
    <string name="summary_link">Il s\'agit du lien vers votre calendrier Celcat configuré pour votre / vos groupe(s). N\'oubliez pas d\'ajouter au moins un groupe avant de copier le lien.</string>
    <string name="update_failed">La mise à jour a échoué, veuillez vérifier votre connexion internet</string>
    <string name="action_retry">Réessayer</string>
    <string name="update_succeeded">Emploi du temps mis à jour avec succès !</string>
    <string name="map_search_hint">Un batiment, un restaurant, …</string>
    <string name="unknown_error">Une erreur est survenue</string>
    <string name="unable_to_retrieve_data">Impossible de récupérer les lieux, vérifiez votre connexion internet.</string>
    <string name="unknow_error">Impossible de traiter les données reçues</string>
    <string name="action_ok">ok</string>
    <string name="no_description_available">Pas de description disponible pour ce lieu.</string>
    <string name="building_update_failed">La mise à jour des bâtiments a échoué, certains peuvent être manquants</string>
    <string name="restaurant_update_failed">La mise à jour des points de restauration a échoué, certains peuvent être manquants</string>
    <string name="building_data_invalid">Les données reçues pour les bâtiments sont invalides, certains peuvent être manquants</string>
    <string name="restaurant_data_invalid">Les données reçues pour les points de restaurations sont invalides, certains peuvent être manquants</string>
    <string name="maps_update_success">Mise à jour des lieux effectuée avec succès !</string>
    <string name="go_to">S\'y rendre</string>
    <string name="unable_to_launch_googlemaps">Impossible de lancer Google Maps</string>
    <string name="note">Note</string>
    <string name="all_day">Toute la journée</string>
    <string name="from">De :</string>
    <string name="to">A :</string>
    <string name="no_value_selected">Pas de valeur selectionnée</string>
    <string name="starting_hour">Heure de début</string>
    <string name="ending_hour">Heure de fin</string>
    <string name="dark_theme_bounds_title">Horaires pour le thème sombre</string>
    <string name="depending_time">Choisir selon l\'heure</string>
    <string name="add_a_picture">+ Ajouter une photo</string>
    <string name="delete_image">Supprimer l\'image ?</string>
    <string name="remove">Supprimer</string>
    <string name="course_visibility">Visibilité des cours</string>
    <string name="you_must_restart">Vous devez redémarrer l\'application pour que cette modification prenne effet</string>
    <string name="title_room_finder">Salle libre</string>
    <string name="building_search">Sélectionnez un bâtiment</string>
    <string name="fragment_room_finder_presentation_text">À la recherche d\'une salle vide pour toi ❤️</string>
    <string name="find_a_free_room">Trouves une salle de libre grâce à\nhttps://rooms-finder.goulin.fr</string>
    <string name="hour_format" translatable="false">HH:mm</string>
    <string name="from_to_format">De %s à %s</string>
    <string name="data_update_failed">Impossible de récupérer les données, veuillez vérifier votre connexion internet</string>
    <string name="since_now">À partir de maintenant</string>
    <string name="smartphone_theme">Thème du smartphone</string>
    <string name="no_reminder_set">"Pas de rappel définit "</string>
    <string name="empty_day">Rien à signaler pour ce jour ! %s</string>
    <string name="data_update">Mise à jour des données..</string>
    <string name="reminder_none">Pas de rappel</string>
    <string name="reminder_fifteen">15 minutes avant</string>
    <string name="reminder_thirty">30 minutes avant</string>
    <string name="reminder_hour">1 heure avant</string>
    <string name="reminder_custom">Personnalisé</string>
    <string name="about_us_text">
        Développé par\n
        Axel Laffite: axel.laffite@univ-tlse3.fr\n
        Antony Dalmière: antony.dalmiere@univ-tlse3.fr\n
        \n
        Une question ? Une suggestion ?\n
        axel.dev.andr@gmail.com\n
        ou\n
        via notre Discord (voir plus bas) !\n
        \n
        Vous souhaitez participer au projet en devenant bêta testeur,
        en devenant développeur ou simplement en aidant pour de la traduction, documentation ou
        tout autre chose ? Rejoingez le Discord de l\'application !\n
        https://discord.gg/6KPZmQa\n
        \n
        Le code source est disponible sur notre Github : \n
        https://github.com/axellaffite/ut3_calendar
    </string>
    <string name="no_location_found">Pas de lieu trouvé ou leurs localisations ne sont pas connues</string>
    <string name="new_event_added">%s</string>
    <string name="new_event_added_full">Ajouté - Le %s à %s.</string>
    <string name="event_deleted">%s</string>
    <string name="event_updated">%s</string>
    <string name="event_updated_full">Mis à jour - %s à %s</string>
    <string name="cours">cours</string>
    <string name="no_title_note">Note sans titre</string>
    <string name="default_event_name">Événement</string>
    <string name="about_us">A propos de nous</string>
    <string name="misc">Divers</string>
    <string name="note_reminder_pictures">"%s, %d photo(s) "</string>
    <string name="unable_take_while_saving">L\'image précédente n\'est pas encore sauvegardée</string>
    <string name="action_cancel">Annuler</string>
    <string name="calendar_updated">Emploi du temps mis à jour !</string>
    <string name="provider_name" translatable="false">light_theme_provider</string>
    <string name="next">Suivant</string>
    <string name="title_which_school">École</string>
    <string name="title_which_link">Lien</string>
    <string name="title_which_groups">Groupes</string>
    <string name="cannot_access_location">Impossible d\'afficher la localisation</string>
    <string name="event_deleted_full">Supprimé - Le %s à %s</string>
    <string name="no_notes">Pas de note à afficher !</string>
    <string name="not_listed">Non listé</string>
    <string name="title_which_link_custom">Lien personnalisé</string>
    <string name="step_next">Suivant</string>
    <string name="step_back">Retour</string>
    <string name="summary_which_school">Sélectionnez l\'école à laquelle vous appartenez</string>
    <string name="summary_which_link">Choisissez le lien qui correspond à votre emploi du temps</string>
    <string name="summary_which_groups">Sélectionnez les groupes auxquels vous appartenez</string>
    <string name="summary_which_link_custom">Saisissez le lien de votre emploi du temps</string>
    <string name="step_cancel">Annuler</string>
    <string name="step_finish">Valider</string>
    <string name="groups_placeholder">M1 INF DL-IHM</string>
    <string name="info_format" translatable="false">%s ( %s )</string>
    <string name="link_placeholder">Lien vers votre emploi du temps</string>
    <string name="error_invalid_link">Lien invalide</string>
    <string name="error_link_groups">Le lien doit contenir au moins un groupe</string>
    <string name="password">Mot de passe</string>
    <string name="username">Identifiant</string>
    <string name="title_authentication">Authentification</string>
    <string name="summary_authentication">Bien que facultatif, saisir ses identifiants est recommandé pour obtenir toutes les informations de la part de Celcat.</string>
    <string name="error_wrong_credentials">Identifiants incorrects</string>
    <string name="error_check_internet">Veuillez vérifier votre connexion internet</string>
    <string name="check_credentials">Validation des identifiants..</string>
    <string name="channel_course_title">Changement dans l\'emploi du temps</string>
    <string name="channel_course_description">Notification de changement dans l\'emploi du temps</string>
    <string name="channel_reminder_title">Rappel</string>
    <string name="channel_reminder_description">Rappel définit par l\'utilisateur</string>
    <string name="step_check_credentials">Vérifier</string>
    <string name="step_checking_credentials">Vérification..</string>
    <string name="error_complete_configuration">Vous devez finir la configuration</string>
    <string name="lets_go">C\'est partit !</string>
    <string name="first_launch_message">Salut à toi et bienvenue dans EDT UT3 !\n\nAvant de commencer, nous devons te demander quelques informations, notamment les groupes auxquels tu appartiens.\n\nAvant de commencer, sâches que tes identifiants seront stockés sur ton téléphone et non pas envoyés sur un serveur distant. L\'étape de l\'authentification est d\'ailleurs optionnelle :)</string>
    <string name="step_skip">Passer</string>
    <string name="personnal_note">Note personnelle</string>
    <string name="downloading_groups">Téléchargement des groupes..</string>
    <string name="channel_firebase_title">Message de la part des créateurs</string>
    <string name="channel_firebase_description">Channel de notification servant à diffuser des informations à l\'ensemble des utilisateurs</string>
    <string name="key_theme" translatable="false">theme</string>
    <string name="key_notification" translatable="false">actual_notification</string>
    <string name="key_section" translatable="false">section</string>
    <string name="key_about_us" translatable="false">about_us</string>
    <string name="key_link" translatable="false">link</string>
    <string name="key_group" translatable="false">groups</string>
    <string name="old_key_group" translatable="false">old_groups</string>
    <string name="key_calendar_mode" translatable="false">calendar_mode</string>
    <string name="key_first_launch" translatable="false">actual_first_launch</string>
    <string name="key_code_version" translatable="false">actual_code_version</string>
    <string name="old_key_first_launch" translatable="false">first_launch</string>
    <string name="old_key_notification" translatable="false">notification</string>
    <string name="course_status_remaining">%d cours restants</string>
    <string name="course_status_default_title">Nom de matière manquant</string>
    <string name="error_groups_not_configured">Veuillez choisir un groupe</string>
    <string name="error_link_not_configured">Veuillez choisir un ou plusieurs groupes dans les paramètres</string>
    <string name="error_get_classes">Impossible de récupérer les noms des salles de cours</string>
    <string name="error_get_courses">Impossible de récupérer le nom des cours</string>
    <string name="error_parse_events">Impossible de traiter les données du calendrier</string>
    <string name="error_updater_unknown">Impossible de mettre à jour les données du calendrier</string>
    <string name="key_update_method" translatable="false">update_method</string>
    <string name="title_notification_calendar_update">Mise à jour du calendrier..</string>
    <string name="channel_update_progression_title">Mise à jour du calendrier en cours...</string>
</resources>