<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/application">

        <ListPreference
            android:key="theme"
            app:title="@string/theme"
            android:entryValues="@array/themesAlias"
            android:entries="@array/themes"
            android:icon="@drawable/ic_theme"/>

        <SwitchPreference
            android:key="notification"
            android:title="@string/enable_update_notifications"
            android:summary="@string/summary_notifications"
            android:icon="@drawable/ic_notifications"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/title_calendar">

        <EditTextPreference
            android:key="section"
            app:title="@string/calendar_link"
            android:summary="@string/summary_link"
            android:icon="@drawable/ic_group"/>

    </PreferenceCategory>



</PreferenceScreen>