<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/application">

        <ListPreference
            android:key="theme"
            app:title="@string/theme"
            android:entryValues="@array/themesAlias"
            android:entries="@array/themes"/>

        <CheckBoxPreference
            android:key="notification"
            android:title="@string/enable_update_notifications" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/title_calendar">

        <EditTextPreference
            android:key="section"
            app:title="@string/calendar_link"/>

    </PreferenceCategory>



</PreferenceScreen>