<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/formation_setup_navigation"
    app:startDestination="@id/which_school">

    <fragment
        android:id="@+id/which_school"
        android:name="com.edt.ut3.ui.preferences.formation.WhichSchool"
        android:label="@string/title_which_school"/>

    <fragment
        android:id="@+id/which_link"
        android:name="com.edt.ut3.ui.preferences.formation.WhichLink"
        android:label="@string/title_which_link"/>

    <fragment
        android:id="@+id/which_groups"
        android:name="com.edt.ut3.ui.preferences.formation.which_groups.FragmentWhichGroups"
        android:label="@string/title_which_groups"/>

    <fragment
        android:id="@+id/which_link_custom"
        android:name="com.edt.ut3.ui.preferences.formation.WhichLinkCustom"
        android:label="@string/title_which_link_custom"/>


</navigation>